--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "passgen-2",
   "private": true,
   "dependencies": {
-    "ratchet": "2.0.2"
+    "ratchet": "2.0.2",
+    "urijs": "uri.js#^1.18.2"
   }
 }
