--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-load-plugins": "^0.5.0",
     "gulp-ruby-sass": "^0.4.3",
     "gulp-size": "^0.3.0",
+    "gulp-subtree": "^0.1.0",
     "gulp-uglify": "^0.3.0",
     "gulp-useref": "^0.4.2",
     "imagemin-gifsicle": "^5.1.0",
