--- a/bower.json
+++ b/bower.json
@@ -4,8 +4,8 @@
   "dependencies": {
     "ratchet": "2.0.2",
     "urijs": "uri.js#^1.18.2",
-    "js-md5": "^2.4.0",
     "jquery": "^3.1.1",
-    "modernizr": "^3.3.1"
+    "modernizr": "^3.3.1",
+    "crypto-js": "^3.1.7",
   }
 }
