--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,6 @@
     "urijs": "uri.js#^1.18.2",
     "jquery": "^3.1.1",
     "modernizr": "^3.3.1",
-    "crypto-js": "^3.1.7",
+    "crypto-js": "^3.1.7"
   }
 }
