adds app manifest
finishes #11

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-jshint": "^1.5.3",
     "gulp-livereload": "^1.2.0",
     "gulp-load-plugins": "^0.5.0",
+    "gulp-manifest": "^0.1.1",
     "gulp-ruby-sass": "^0.4.3",
     "gulp-size": "^0.3.0",
     "gulp-subtree": "^0.1.0",
