--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "passgen-2",
+  "name": "passgen",
   "private": true,
   "dependencies": {
-    "ratchet": "2.0.2",
+    "bootstrap": "^3.3.7",
     "urijs": "uri.js#^1.18.2",
     "jquery": "^3.1.1",
     "modernizr": "^3.3.1",
