--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-webpack-plugin": "",
     "jquery": "",
     "style-loader": "",
+    "urijs": "^1.19.1",
     "webpack": "^4.25.0",
     "webpack-cli": "",
     "webpack-dev-middleware": ""
