--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "SengMing Tan",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^4.1.3",
     "clean-webpack-plugin": "",
     "crypto-js": "^3.1.9-1",
     "css-loader": "",
@@ -21,6 +22,7 @@
     "file-loader": "",
     "html-webpack-plugin": "",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.5",
     "style-loader": "",
     "urijs": "^1.19.1",
     "webpack": "^4.25.0",
