--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   "license": "ISC",
   "devDependencies": {
     "bootstrap": "^4.1.3",
-    "clean-webpack-plugin": "",
+    "clean-webpack-plugin": "^1.0.0",
     "crypto-js": "^3.1.9-1",
-    "css-loader": "",
-    "express": "",
-    "file-loader": "",
-    "html-webpack-plugin": "",
+    "css-loader": "^1.0.1",
+    "express": "^4.16.4",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.5",
-    "style-loader": "",
+    "style-loader": "^0.23.1",
     "urijs": "^1.19.1",
     "webpack": "^4.25.0",
-    "webpack-cli": "",
-    "webpack-dev-middleware": ""
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.10"
   }
 }
