--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "bootstrap": "^4.1.3",
     "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
     "crypto-js": "^3.1.9-1",
     "css-loader": "^1.0.1",
     "express": "^4.16.4",
